<resources>
    <string name="app_name">Pop Movie</string>
    <string name="settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_favorite">Favorite</string>
    <string name="popularity_sort">Sort by Popularity</string>
    <string name="rating_sort">Sort by Ratings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="release_date">Released: </string>
    <string name="details">Details</string>
    <string name="ratings">Rating: </string>
    <string name="overview">Overview</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>

    <string name="pref_sort_key">sorting</string>
    <string name="pref_sort_label">Sorting Order</string>
    <string name="pref_sort_default" translatable="false">popular</string>
    <string name="pref_sort_label_popular">Most Popular</string>
    <string name="pref_sort_label_ratings">Highest Rated</string>
    <string name="pref_sort_label_favorite">Favorite</string>

    <string name="pref_sort_sort_by_popular" translatable="false">popular</string>
    <string name="pref_sort_sort_by_ratings" translatable="false">top_rated</string>
    <string name="pref_sort_sort_by_favorite" translatable="false">favorite</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings">Settings</string>

    <string name="sync_account_type">popmovie.example.com</string>
    <string name="content_authority">com.example.android.popmovie</string>

    <string name="favorite_file_key">favoriteMovies</string>
</resources>
